; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_cascade_free_fn.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_cascade_free_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stream_filter = type { i32 }
%struct.cascade_filter = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stream_filter*)* @cascade_free_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cascade_free_fn(%struct.stream_filter* %0) #0 {
  %2 = alloca %struct.stream_filter*, align 8
  %3 = alloca %struct.cascade_filter*, align 8
  store %struct.stream_filter* %0, %struct.stream_filter** %2, align 8
  %4 = load %struct.stream_filter*, %struct.stream_filter** %2, align 8
  %5 = bitcast %struct.stream_filter* %4 to %struct.cascade_filter*
  store %struct.cascade_filter* %5, %struct.cascade_filter** %3, align 8
  %6 = load %struct.cascade_filter*, %struct.cascade_filter** %3, align 8
  %7 = getelementptr inbounds %struct.cascade_filter, %struct.cascade_filter* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @free_stream_filter(i32 %8)
  %10 = load %struct.cascade_filter*, %struct.cascade_filter** %3, align 8
  %11 = getelementptr inbounds %struct.cascade_filter, %struct.cascade_filter* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @free_stream_filter(i32 %12)
  %14 = load %struct.stream_filter*, %struct.stream_filter** %2, align 8
  %15 = call i32 @free(%struct.stream_filter* %14)
  ret void
}

declare dso_local i32 @free_stream_filter(i32) #1

declare dso_local i32 @free(%struct.stream_filter*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
